--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>com.eharrison.canary</groupId>
   <artifactId>player-state</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1</version>
 
   <name>PlayerState</name>
 
@@ -17,6 +17,7 @@
       <groupId>net.canarymod</groupId>
       <artifactId>CanaryLib</artifactId>
       <version>1.1.3-SNAPSHOT</version>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
