--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,14 @@
 
   <groupId>com.eharrison.canary</groupId>
   <artifactId>player-state</artifactId>
-  <version>0.0.1</version>
+  <version>0.0.2-SNAPSHOT</version>
 
   <name>PlayerState</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <junit.version>4.11</junit.version>
+    <java.version>1.6</java.version>
   </properties>
 
   <dependencies>
@@ -35,8 +36,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.1</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+          <source>${java.version}</source>
+          <target>${java.version}</target>
         </configuration>
       </plugin>
     </plugins>
