--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <dependency>
       <groupId>net.canarymod</groupId>
       <artifactId>CanaryLib</artifactId>
-      <version>1.1.3-SNAPSHOT</version>
+      <version>1.2.0-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
 
@@ -40,6 +40,11 @@
           <target>${java.version}</target>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>versions-maven-plugin</artifactId>
+        <version>2.1</version>
+      </plugin>
     </plugins>
   </build>
 
@@ -49,7 +54,7 @@
       <name>Visual Illusions Repository</name>
       <url>http://repo.visualillusionsent.net/repository/public/</url>
 	    <releases>
-        <enabled>false</enabled>
+        <enabled>true</enabled>
 	    </releases>
 	    <snapshots>
         <enabled>true</enabled>
