Combined player state cause. Fixed for 1.8 changes. Made elements saved configurable.

--- a/src/main/resources/PlayerState.cfg
+++ b/src/main/resources/PlayerState.cfg
@@ -1,1 +1,7 @@
 automate=false
+
+;save.WORLD_ALL.achievements=false
+;save.WORLD_ALL.statistics=false
+
+;save.WORLD_foo.achievements=false
+;save.WORLD_foo.statistics=false
