Removed unneeded logging. Added config examples.

--- a/src/main/resources/PlayerState.cfg
+++ b/src/main/resources/PlayerState.cfg
@@ -2,6 +2,11 @@ automate=true
 
 ;save.WORLD_ALL.achievements=false
 ;save.WORLD_ALL.statistics=false
+;save.WORLD_ALL.prefix=false
+;save.WORLD_ALL.inventory=true
+;save.WORLD_ALL.gamemode=true
+;save.WORLD_ALL.locations=true
+;save.WORLD_ALL.conditions=true
 
 ;save.WORLD_foo.achievements=false
 ;save.WORLD_foo.statistics=false
