Rewrite for new hooks.

--- a/src/main/resources/PlayerState.cfg
+++ b/src/main/resources/PlayerState.cfg
@@ -1,12 +1,34 @@
+; This is the default configuration file for PlayerState.
+
+; *****
+; AUTOMATE:
+; Controls whether PlayerState will automatically create a player world save whenever a
+; player transitions between worlds on the Canary server. If true, then by default a save will be
+; made for each world for that player. If false, then only a global WORLD_ALL state will be saved.
+; *****
+
 automate=true
 
-;save.WORLD_ALL.achievements=false
-;save.WORLD_ALL.statistics=false
-;save.WORLD_ALL.prefix=false
-;save.WORLD_ALL.inventory=true
-;save.WORLD_ALL.gamemode=true
-;save.WORLD_ALL.locations=true
-;save.WORLD_ALL.conditions=true
-
-;save.WORLD_foo.achievements=false
-;save.WORLD_foo.statistics=false
+; *****
+; SAVE CONFIGURATION:
+; Controls the specific state elements that will be saved for the player in a particular world.
+; Say for example that you want to have achievements and statistics for the player in the world
+; "foo" saved independent of the global achievements. You would then provide the following
+; properties:
+;
+;save.WORLD_foo.achievements=true
+;save.WORLD_foo.statistics=true
+;
+; The default settings for PlayerState are:
+;
+;save.<WORLD NAME>.achievements=false
+;save.<WORLD NAME>.statistics=false
+;save.<WORLD NAME>.prefix=false
+;save.<WORLD NAME>.inventory=true
+;save.<WORLD NAME>.gamemode=true
+;save.<WORLD NAME>.locations=true
+;save.<WORLD NAME>.conditions=true
+;
+; TODO: provide more configuration examples
+;
+; *****
