Corrected spawn and home behavior.

--- a/src/main/resources/PlayerState.cfg
+++ b/src/main/resources/PlayerState.cfg
@@ -1,6 +1,15 @@
 ; This is the default configuration file for PlayerState.
 
 ; *****
+; EXACTSPAWN:
+; Controls whether PlayerState will cause the player to spawn to exact coordinates when using /spawn
+; or upon death rather than the default Canary behavior of the highest location at spawn and around
+; spawn after death.
+; *****
+exactSpawn=true
+
+
+; *****
 ; AUTOMATE:
 ; Controls whether PlayerState will automatically create a player world save whenever a
 ; player transitions between worlds on the Canary server. If true, then by default a save will be
