Modified to allow groups of worlds to be associated with different states that are loaded and saved.

--- a/src/main/resources/PlayerState.cfg
+++ b/src/main/resources/PlayerState.cfg
@@ -1,43 +1,44 @@
-; This is the default configuration file for PlayerState.
+# This is the default configuration file for PlayerState.
 
-; *****
-; EXACTSPAWN:
-; Controls whether PlayerState will cause the player to spawn to exact coordinates when using /spawn
-; or upon death rather than the default Canary behavior of the highest location at spawn and around
-; spawn after death.
-; *****
+# *****
+# EXACTSPAWN:
+# Controls whether PlayerState will cause the player to spawn to exact coordinates when using /spawn
+# or upon death rather than the default Canary behavior of the highest location at spawn and around
+# spawn after death.
+# *****
 exactSpawn=true
 
+# *****
+# STATE:
+# *****
+state.global=WORLD_ALL
 
-; *****
-; AUTOMATE:
-; Controls whether PlayerState will automatically create a player world save whenever a
-; player transitions between worlds on the Canary server. If true, then by default a save will be
-; made for each world for that player. If false, then only a global WORLD_ALL state will be saved.
-; *****
+#state.world.default=foo
+#state.world.foo=foo
 
-automate=true
 
-; *****
-; SAVE CONFIGURATION:
-; Controls the specific state elements that will be saved for the player in a particular world.
-; Say for example that you want to have achievements and statistics for the player in the world
-; "foo" saved independent of the global achievements. You would then provide the following
-; properties:
-;
-;save.WORLD_foo.achievements=true
-;save.WORLD_foo.statistics=true
-;
-; The default settings for PlayerState are:
-;
-;save.<WORLD NAME>.achievements=false
-;save.<WORLD NAME>.statistics=false
-;save.<WORLD NAME>.prefix=false
-;save.<WORLD NAME>.inventory=true
-;save.<WORLD NAME>.gamemode=true
-;save.<WORLD NAME>.locations=true
-;save.<WORLD NAME>.conditions=true
-;
-; TODO: provide more configuration examples
-;
-; *****
+
+
+# *****
+# SAVE CONFIGURATION:
+# Controls the specific state elements that will be saved for the player in a particular state.
+# Say for example that you want to have achievements and statistics for the player in the world
+# "foo" saved independent of the global achievements. You would then provide the following
+# properties:
+#
+#save.foo.achievements=true
+#save.foo.statistics=true
+#
+# The default settings for PlayerState are:
+#
+#save.<STATE>.achievements=false
+#save.<STATE>.statistics=false
+#save.<STATE>.prefix=false
+#save.<STATE>.inventory=true
+#save.<STATE>.gamemode=true
+#save.<STATE>.locations=true
+#save.<STATE>.conditions=true
+#
+# TODO: provide more configuration examples
+#
+# *****
