Added configurable logging level. Initial conversion to common API format. Refactored plugin elements to be initialized during plugin enable and to be released on plugin disable.

--- a/src/main/resources/PlayerState.cfg
+++ b/src/main/resources/PlayerState.cfg
@@ -5,6 +5,14 @@
 
 
 # *****
+# LOG LEVEL:
+# Set the level of the logs for the PlayerState plugin.
+# Options are: off, fatal, error, warn, info, debug, trace, all
+# *****
+log.level=info
+
+
+# *****
 # EXACTSPAWN:
 # The configuration property `exactSpawn` is a boolean and defaults to `true`. This property
 # controls how PlayerState manages the spawn location for players. If set to `true` then players
